--- a/logistic classifier.ipynb
+++ b/logistic classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c05b0652",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5adf0146",
    "metadata": {},
    "outputs": [
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e24a69b3",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7875af7f",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "x_train,x_test,y_train,y_test = train_test_split(x,y, test_size=0.2, random_state=0)\n",
     "\n",
-    "x_train,x_test,y_train,y_test\n"
+    "x_train,x_test,y_train,y_testa\n"
    ]
   },
   {
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4a3dd448",
    "metadata": {},
    "outputs": [
